# polymedia

./: .$Design.drawio.bkp  .gitignore  Design.drawio  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  package-lock.json  package.json
cpp-encoder/: CMakeLists.txt  Dockerfile
cpp-encoder/src/: main.cpp
cuda-encoder/: main  main.cu
design/: system.drawio
nginx/: nginx.conf
node-backend/: package-lock.json  package.json  tsconfig.json
node-backend/src/config/: config.ts
node-backend/src/controllers/: appController.ts
node-backend/src/middlewares/: errorHandler.ts
node-backend/src/routes/: itemRoutes.ts
notification_service/: .gitignore  Dockerfile  README.md  mix.exs
notification_service/lib/: notification_service.ex
notification_service/lib/notification_service/: application.ex
notification_service/test/: notification_service_test.exs
poly-serve/: index.html
poly-serve/src/: App.tsx
poly-ssr/: index.html  package-lock.json  package.json  vite.config.ts
poly-ssr/server/: index.jsx
poly-ssr/src/: App.tsx  main.tsx
poly-ssr/src/Store/: Store.ts  hook.ts
react-frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
react-frontend/public/: index.html
react-frontend/src/: App.tsx  config.ts  index.css  index.tsx  vite-env.d.ts
react-frontend/src/Layouts/: CreateAccount.tsx  Dashboard.tsx  ErrorLayout.tsx  (+2 more)
rest-server/: Dockerfile  Makefile  go.mod  go.sum
rest-server/configs/: config.go  dev.env
video-server-gin/: go.mod  main.go
(+58 files in other folders)
